Typo fixes in concepts

--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -2092,13 +2092,13 @@
 	concept_tec_eco_planet_metallurgists_icon: "£job_foundry£ $planet_metallurgists$ $tec_loc_eco_category$"
 	concept_tec_eco_planet_metallurgists_alias: "$planet_metallurgists$"
 	concept_tec_eco_planet_metallurgists_alias_icon: "£job_foundry£ $planet_metallurgists$"
-	concept_tec_eco_planet_metallurgists_desc: "This category covers the jobs producing §Y$tec_loc_alloys$§!, examples such as ['concept_tec_specialist_job_foundry_plural_icon'], ['concept_tec_specialist_job_foundry_drone_plural_icon'], ['concept_tec_specialist_job_fabricator_plural_icon'] and ['concept_tec_specialist_job_catalytic_technician_plural_icon'].\n\nInherits Percentage Modifiers from: ['concept_tec_eco_planet_jobs_productive_alias_icon']"
+	concept_tec_eco_planet_metallurgists_desc: "This category covers the jobs producing §Y$tec_loc_alloys$§!, examples such as ['concept_tec_specialist_job_foundry_plural_icon'], ['concept_tec_specialist_job_alloy_drone_plural_icon'], ['concept_tec_specialist_job_fabricator_plural_icon'] and ['concept_tec_specialist_job_catalytic_technician_plural_icon'].\n\nInherits Percentage Modifiers from: ['concept_tec_eco_planet_jobs_productive_alias_icon']"
 
 	concept_tec_eco_planet_artisans: "$planet_artisans$ $tec_loc_eco_category$"
 	concept_tec_eco_planet_artisans_icon: "£job_artisan£ $planet_artisans$ $tec_loc_eco_category$"
 	concept_tec_eco_planet_artisans_alias: "$planet_artisans$"
 	concept_tec_eco_planet_artisans_alias_icon: "£job_artisan£ $planet_artisans$"
-	concept_tec_eco_planet_artisans_desc: "This category covers the jobs producing §Y$tec_loc_consumer_goods$§!, examples such as ['concept_tec_specialist_job_foundry_plural_icon'], ['concept_tec_specialist_job_foundry_drone_plural_icon'], ['concept_tec_specialist_job_fabricator_plural_icon'] and ['concept_tec_specialist_job_catalytic_technician_plural_icon'].\n\nInherits Percentage Modifiers from: ['concept_tec_eco_planet_jobs_productive_alias_icon']"
+	concept_tec_eco_planet_artisans_desc: "This category covers the jobs producing §Y$tec_loc_consumer_goods$§!, examples such as ['concept_tec_specialist_job_artisan_plural_icon'], ['concept_tec_specialist_job_artisan_drone_plural_icon'] and ['concept_tec_specialist_job_artificer_plural_icon'].\n\nInherits Percentage Modifiers from: ['concept_tec_eco_planet_jobs_productive_alias_icon']"
 
 	concept_tec_eco_planet_tec_necromancers: "$planet_tec_necromancers$ $tec_loc_eco_category$"
 	concept_tec_eco_planet_tec_necromancers_icon: "£job_necromancer£ $planet_tec_necromancers$ $tec_loc_eco_category$"
