Even more changes

--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -1346,15 +1346,15 @@
 	job_tec_broodqueen_drone:0 "Brood Queen"
 	job_tec_broodqueen_drone_plural:0 "Brood Queens"
 	job_tec_broodqueen_drone_desc:0 "Specially breed and unique autonomous drones whose main function is providing the Hive Mind with a healthy drone litter and control of those drones. Its great degree of specialization requires constant maintenance and nurture."
-	job_tec_broodqueen_drone_effect_desc:0 "£job_tec_broodqueen_drone£ $job_tec_broodqueen_drone_plural$ assemble organic £pop£ §GPops§! and multiplies £unity£ §GUnity§!, based on the number of £job_tec_broodlord_drone£ §YBroodlords§! present in the planet."
+	job_tec_broodqueen_drone_effect_desc:0 "£job_tec_broodqueen_drone£ $job_tec_broodqueen_drone_plural$ convert $tec_loc_basic_resources$ into §Y$tec_loc_organic_assembly$§! and produce §Y$tec_loc_unity$§!, based on the number of £job_tec_broodlord_drone£ §YBroodlords§! present in the planet."
 	job_tec_broodqueen_drone_effect_desc_planet:0 "[root.tec_broodqueen_production]"
-	job_tec_broodqueen_drone_effect_desc_0:0 "$job_tec_broodqueen_drone_effect_desc$\nCurrently, the Broodqueen on this planet produces §G1§! monthly assembly."
-	job_tec_broodqueen_drone_effect_desc_1:0 "$job_tec_broodqueen_drone_effect_desc$\nCurrently, the Broodqueen on this planet produces §G2§! monthly assembly."
-	job_tec_broodqueen_drone_effect_desc_2:0 "$job_tec_broodqueen_drone_effect_desc$\nCurrently, the Broodqueen on this planet produces §G3§! monthly assembly."
-	job_tec_broodqueen_drone_effect_desc_3:0 "$job_tec_broodqueen_drone_effect_desc$\nCurrently, the Broodqueen on this planet produces §G4§! monthly assembly."
-	job_tec_broodqueen_drone_effect_desc_4:0 "$job_tec_broodqueen_drone_effect_desc$\nCurrently, the Broodqueen on this planet produces §G5§! monthly assembly."
-	job_tec_broodqueen_drone_effect_desc_5:0 "$job_tec_broodqueen_drone_effect_desc$\nCurrently, the Broodqueen on this planet produces §G6§! monthly assembly."
-	job_tec_broodqueen_drone_effect_desc_growth:0 "£job_tec_broodqueen_drone£ $job_tec_broodqueen_drone_plural$ provides organic £pop£ §GGrowth§! and multiplies £unity£ §GUnity§!, based on the number of £job_tec_broodlord_drone£ §YBroodlords§! present in the planet."
+	job_tec_broodqueen_drone_effect_desc_0:0 "$job_tec_broodqueen_drone_effect_desc$\nCurrently, the Broodqueen on this planet produces §G1§! monthly $tec_loc_organic_assembly$."
+	job_tec_broodqueen_drone_effect_desc_1:0 "$job_tec_broodqueen_drone_effect_desc$\nCurrently, the Broodqueen on this planet produces §G2§! monthly $tec_loc_organic_assembly$."
+	job_tec_broodqueen_drone_effect_desc_2:0 "$job_tec_broodqueen_drone_effect_desc$\nCurrently, the Broodqueen on this planet produces §G3§! monthly $tec_loc_organic_assembly$."
+	job_tec_broodqueen_drone_effect_desc_3:0 "$job_tec_broodqueen_drone_effect_desc$\nCurrently, the Broodqueen on this planet produces §G4§! monthly $tec_loc_organic_assembly$."
+	job_tec_broodqueen_drone_effect_desc_4:0 "$job_tec_broodqueen_drone_effect_desc$\nCurrently, the Broodqueen on this planet produces §G5§! monthly $tec_loc_organic_assembly$."
+	job_tec_broodqueen_drone_effect_desc_5:0 "$job_tec_broodqueen_drone_effect_desc$\nCurrently, the Broodqueen on this planet produces §G6§! monthly $tec_loc_organic_assembly$."
+	job_tec_broodqueen_drone_effect_desc_growth:0 "£job_tec_broodqueen_drone£ $job_tec_broodqueen_drone_plural$ convert $tec_loc_basic_resources$ into §Y$tec_loc_pop_growth$§! and produce §Y$tec_loc_unity$§!, based on the number of £job_tec_broodlord_drone£ §YBroodlords§! present in the planet."
 	mod_job_tec_broodqueen_drone_add:0 "$job_tec_broodqueen_drone$ Jobs"
 	mod_job_tec_broodqueen_drone_per_pop:0 "§G+1§! $job_tec_broodqueen_drone$ Job per $VALUE$ Pops"
 	mod_job_tec_broodqueen_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_broodqueen_drone_add£ per $VALUE$ £pop£"
@@ -3684,6 +3684,7 @@
 	mod_tec_planet_psionic_jobs_produces_mult_per_pop:0 "$mod_planet_psionic_jobs_produces_mult$ from £pop£ Pops"
 	mod_tec_planet_jobs_produces_mult_per_pop:0 "$mod_planet_jobs_produces_mult$ from £pop£ Pops"
 	mod_tec_perfect_planet_jobs_produces_mult_per_pop:0 "$mod_perfect_planet_jobs_produces_mult$ from £pop£ Pops"
+	mod_tec_planet_jobs_robotic_produces_mult_per_pop:0 "$mod_planet_jobs_robotic_produces_mult$ from £job_roboticist£ Robotic Pops"
 	mod_tec_planet_stability_add_per_pop: "$tec_loc_stability$ from £pop£ Pops"
 # Self-assembly
 	mod_tec_planet_pop_assembly_organic_add_per_pop:0 "Monthly Organic Pop Assembly from £pop£ Pops"
