--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -522,6 +522,29 @@
 	concept_tec_ruler_job_tec_corpo_litho_manager_plural_icon: "£job_tec_corpo_litho_manager£ $job_tec_corpo_litho_manager_plural$"
 	concept_tec_ruler_job_tec_corpo_litho_manager_desc: "§L$job_tec_corpo_litho_manager_desc$§!\n\n$job_tec_corpo_litho_manager_effect_desc$\n\n$tec_loc_c_stratum$: §Y$pop_cat_ruler$§!\n$tec_loc_c_produces$:\n\n"
 
+
+
+	concept_tec_ruler_job_tec_broodqueen_drone: "$job_tec_broodqueen_drone$"
+	concept_tec_ruler_job_tec_broodqueen_drone_alias: "$job_tec_broodqueen_drone$"
+	concept_tec_ruler_job_tec_broodqueen_drone_icon: "£job_tec_broodqueen_drone£ $job_tec_broodqueen_drone$"
+	concept_tec_ruler_job_tec_broodqueen_drone_plural: "$job_tec_broodqueen_drone_plural$"
+	concept_tec_ruler_job_tec_broodqueen_drone_plural_icon: "£job_tec_broodqueen_drone£ $job_tec_broodqueen_drone_plural$"
+	concept_tec_ruler_job_tec_broodqueen_drone_desc: "§L$job_tec_broodqueen_drone_desc$§!\n\n$job_tec_broodqueen_drone_effect_desc$\n\n$tec_loc_c_stratum$: §Y$pop_cat_tec_brood_drone$§!\n$tec_loc_c_produces$:\n\n"
+
+	concept_tec_ruler_job_tec_broodlord_drone: "$job_tec_broodlord_drone$"
+	concept_tec_ruler_job_tec_broodlord_drone_alias: "$job_tec_broodlord_drone$"
+	concept_tec_ruler_job_tec_broodlord_drone_icon: "£job_tec_broodlord_drone£ $job_tec_broodlord_drone$"
+	concept_tec_ruler_job_tec_broodlord_drone_plural: "$job_tec_broodlord_drone_plural$"
+	concept_tec_ruler_job_tec_broodlord_drone_plural_icon: "£job_tec_broodlord_drone£ $job_tec_broodlord_drone_plural$"
+	concept_tec_ruler_job_tec_broodlord_drone_desc: "§L$job_tec_broodlord_drone_desc$§!\n\n$job_tec_broodlord_drone_effect_desc$\n\n$tec_loc_c_stratum$: §Y$pop_cat_tec_brood_drone$§!\n$tec_loc_c_produces$:\n\n"
+
+	concept_tec_ruler_job_tec_overmind_drone: "$job_tec_overmind_drone$"
+	concept_tec_ruler_job_tec_overmind_drone_alias: "$job_tec_overmind_drone$"
+	concept_tec_ruler_job_tec_overmind_drone_icon: "£job_tec_overmind_drone£ $job_tec_overmind_drone$"
+	concept_tec_ruler_job_tec_overmind_drone_plural: "$job_tec_overmind_drone_plural$"
+	concept_tec_ruler_job_tec_overmind_drone_plural_icon: "£job_tec_overmind_drone£ $job_tec_overmind_drone_plural$"
+	concept_tec_ruler_job_tec_overmind_drone_desc: "§L$job_tec_overmind_drone_desc$§!\n\n$job_tec_overmind_drone_effect_desc$\n\n$tec_loc_c_stratum$: §Y$pop_cat_tec_brood_drone$§!\n$tec_loc_c_produces$:\n\n"
+
 	#concept_tec_ruler_job_BASE: "$job_BASE$"
 	#concept_tec_ruler_job_BASE_alias: "$job_BASE$"
 	#concept_tec_ruler_job_BASE_icon: "£job_BASE£ $job_BASE$"
@@ -839,26 +862,32 @@
 	concept_tec_specialist_job_coordinator_icon: "£job_coordinator£ $job_coordinator$"
 	concept_tec_specialist_job_coordinator_plural: "$job_coordinator_plural$"
 	concept_tec_specialist_job_coordinator_plural_icon: "£job_coordinator£ $job_coordinator_plural$"
-	concept_tec_specialist_job_coordinator_desc: "§L$job_coordinator_desc$§!\n\n$job_coordinator_effect_desc$\n\n$tec_loc_c_stratum$: §Y$pop_cat_specialist$§!\n$tec_loc_c_eco_cat$: ['concept_tec_eco_planet_administrators_alias']\n\n$tec_loc_edict_funds$: §G+2§!\n$tec_loc_c_produces$: §Y£unity£ 4§!\n$tec_loc_c_upkeep$: §Y£trigger_tec_research£ 2§!"
+	concept_tec_specialist_job_coordinator_desc: "§L$job_coordinator_desc$§!\n\n$job_coordinator_effect_desc$\n\n$tec_loc_c_stratum$: §Y$pop_cat_complex_drone$§!\n$tec_loc_c_eco_cat$: ['concept_tec_eco_planet_administrators_alias']\n\n$tec_loc_edict_funds$: §G+2§!\n$tec_loc_c_produces$: §Y£unity£ 4§!\n$tec_loc_c_upkeep$: §Y£trigger_tec_research£ 2§!"
 
 	concept_tec_specialist_job_synapse_drone: "$job_synapse_drone$"
 	concept_tec_specialist_job_synapse_drone_icon: "£job_synapse_drone£ $job_synapse_drone$"
 	concept_tec_specialist_job_synapse_drone_plural: "$job_synapse_drone_plural$"
 	concept_tec_specialist_job_synapse_drone_plural_icon: "£job_synapse_drone£ $job_synapse_drone_plural$"
-	concept_tec_specialist_job_synapse_drone_desc: "§L$job_synapse_drone_desc$§!\n\n$job_synapse_drone_effect_desc$\n\n$tec_loc_c_stratum$: §Y$pop_cat_specialist$§!\n$tec_loc_c_eco_cat$: ['concept_tec_eco_planet_administrators_alias']\n\n$tec_loc_edict_funds$: §G+2§!\n$tec_loc_c_produces$: §Y£unity£ 4§!\n$tec_loc_c_upkeep$ (Organic): §Y£food£ 2§! §Y£energy£ 2§!\n$tec_loc_c_upkeep$ (Lithoid): §Y£minerals£ 2§! §Y£energy£ 2§!"
+	concept_tec_specialist_job_synapse_drone_desc: "§L$job_synapse_drone_desc$§!\n\n$job_synapse_drone_effect_desc$\n\n$tec_loc_c_stratum$: §Y$pop_cat_complex_drone$§!\n$tec_loc_c_eco_cat$: ['concept_tec_eco_planet_administrators_alias']\n\n$tec_loc_edict_funds$: §G+2§!\n$tec_loc_c_produces$: §Y£unity£ 4§!\n$tec_loc_c_upkeep$ (Organic): §Y£food£ 2§! §Y£energy£ 2§!\n$tec_loc_c_upkeep$ (Lithoid): §Y£minerals£ 2§! §Y£energy£ 2§!"
 
 	concept_tec_specialist_job_tec_network_drone: "$job_tec_network_drone$"
 	concept_tec_specialist_job_tec_network_drone_icon: "£job_tec_network_drone£ $job_tec_network_drone$"
 	concept_tec_specialist_job_tec_network_drone_plural: "$job_tec_network_drone_plural$"
 	concept_tec_specialist_job_tec_network_drone_plural_icon: "£job_tec_network_drone£ $job_tec_network_drone_plural$"
-	concept_tec_specialist_job_tec_network_drone_desc: "§L$job_tec_network_drone_desc$§!\n\n$job_tec_network_drone_effect_desc$\n\n$tec_loc_c_stratum$: §Y$pop_cat_specialist$§!\n$tec_loc_c_eco_cat$: ['concept_tec_eco_planet_administrators_alias']\n\n$tec_loc_edict_funds$: §G+2§!\n$tec_loc_c_produces$: §Y£unity£ 4§!\n$tec_loc_c_upkeep$: §Y£trigger_tec_research£ 2§!"
+	concept_tec_specialist_job_tec_network_drone_desc: "§L$job_tec_network_drone_desc$§!\n\n$job_tec_network_drone_effect_desc$\n\n$tec_loc_c_stratum$: §Y$pop_cat_complex_drone$§!\n$tec_loc_c_eco_cat$: ['concept_tec_eco_planet_administrators_alias']\n\n$tec_loc_edict_funds$: §G+2§!\n$tec_loc_c_produces$: §Y£unity£ 4§!\n$tec_loc_c_upkeep$: §Y£trigger_tec_research£ 2§!"
 
 	concept_tec_specialist_job_tec_resonance_drone: "$job_tec_resonance_drone$"
 	concept_tec_specialist_job_tec_resonance_drone_icon: "£job_tec_resonance_drone£ $job_tec_resonance_drone$"
 	concept_tec_specialist_job_tec_resonance_drone_plural: "$job_tec_resonance_drone_plural$"
 	concept_tec_specialist_job_tec_resonance_drone_plural_icon: "£job_tec_resonance_drone£ $job_tec_resonance_drone_plural$"
-	concept_tec_specialist_job_tec_resonance_drone_desc: "§L$job_tec_resonance_drone_desc$§!\n\n$job_tec_resonance_drone_effect_desc$\n\n$tec_loc_c_stratum$: §Y$pop_cat_specialist$§!\n$tec_loc_c_eco_cat$: ['concept_tec_eco_planet_administrators_alias']\n\n$tec_loc_edict_funds$: §G+2§!\n$tec_loc_c_produces$: §Y£unity£ 4§!\n$tec_loc_c_upkeep$ (Organic): §Y£food£ 2§! §Y£energy£ 2§!\n$tec_loc_c_upkeep$ (Lithoid): §Y£minerals£ 2§! §Y£energy£ 2§!"
+	concept_tec_specialist_job_tec_resonance_drone_desc: "§L$job_tec_resonance_drone_desc$§!\n\n$job_tec_resonance_drone_effect_desc$\n\n$tec_loc_c_stratum$: §Y$pop_cat_complex_drone$§!\n$tec_loc_c_eco_cat$: ['concept_tec_eco_planet_administrators_alias']\n\n$tec_loc_edict_funds$: §G+2§!\n$tec_loc_c_produces$: §Y£unity£ 4§!\n$tec_loc_c_upkeep$ (Organic): §Y£food£ 2§! §Y£energy£ 2§!\n$tec_loc_c_upkeep$ (Lithoid): §Y£minerals£ 2§! §Y£energy£ 2§!"
 
+	concept_tec_specialist_job_tec_pherodrone_drone: "$job_tec_pherodrone_drone$"
+	concept_tec_specialist_job_tec_pherodrone_drone_alias: "$job_tec_pherodrone_drone$"
+	concept_tec_specialist_job_tec_pherodrone_drone_icon: "£job_tec_pherodrone_drone£ $job_tec_pherodrone_drone$"
+	concept_tec_specialist_job_tec_pherodrone_drone_plural: "$job_tec_pherodrone_drone_plural$"
+	concept_tec_specialist_job_tec_pherodrone_drone_plural_icon: "£job_tec_pherodrone_drone£ $job_tec_pherodrone_drone_plural$"
+	concept_tec_specialist_job_tec_pherodrone_drone_desc: "§L$job_tec_pherodrone_drone_desc$§!\n\n$job_tec_pherodrone_drone_effect_desc$\n\n$tec_loc_c_stratum$: §Y$pop_cat_complex_drone$§!\n$tec_loc_c_produces$:\n\n"
 
 	# /
  # Worker
@@ -937,7 +966,7 @@
 	concept_tec_worker_job_tec_labrat_icon: "£job_tec_labrat£ $job_tec_labrat$"
 	concept_tec_worker_job_tec_labrat_plural: "$job_tec_labrat_plural$"
 	concept_tec_worker_job_tec_labrat_plural_icon: "£job_tec_labrat£ $job_tec_labrat_plural$"
-	concept_tec_worker_job_tec_labrat_desc: "§L$job_tec_labrat_desc$§!\n\n$job_tec_labrat_effect_desc$\n\n$tec_loc_c_stratum$: §Y$pop_cat_worker$§!\n$tec_loc_c_eco_cat$: ['concept_tec_eco_planet_tec_labrats_alias']\n\nIf non-Megacorp:\n$t$$tec_loc_amenities$: §R-2§!\nIf Megacorp:\n$t$$tec_loc_trade_value$: §R-2§!\n$tec_loc_c_produces$: §Y£trigger_tec_research£ 2§!"
+	concept_tec_worker_job_tec_labrat_desc: "§L$job_tec_labrat_desc$§!\n\n$job_tec_labrat_effect_desc$\n\n$tec_loc_c_stratum$: §Y$pop_cat_worker$§!\n$tec_loc_c_eco_cat$: ['concept_tec_eco_planet_tec_labrats_alias']\n\nIf non-Megacorp:\n$t$$tec_loc_amenities$: §R-2§!\nIf Megacorp:\n$t$$tec_loc_trade_value$: §R-2§!\n$tec_loc_c_produces$: §Y£trigger_tec_research£ 2.5§!"
 
 	concept_tec_worker_job_tec_reeducated_subject: "$job_tec_reeducated_subject$"
 	concept_tec_worker_job_tec_reeducated_subject_alias: "$job_tec_reeducated_subject$"
@@ -1059,6 +1088,13 @@
 	concept_tec_worker_job_tec_thermogenerator_drone_plural_icon: "£job_tec_thermogenerator_drone£ $job_tec_thermogenerator_drone_plural$"
 	concept_tec_worker_job_tec_thermogenerator_drone_desc: "§L$job_tec_thermogenerator_drone_desc$§!\n\n$job_tec_thermogenerator_drone_effect_desc$\n\n$tec_loc_c_stratum$: §Y$pop_cat_simple_drone$§!\n$tec_loc_c_eco_cat$: ['concept_tec_eco_planet_technician_alias']\n\n$tec_loc_amenities_gestalt$: §G+2§!\n$tec_loc_c_produces$: §Y£energy£ 8§!"
 	
+	concept_tec_worker_job_tec_mental_servant: "$job_tec_mental_servant$"
+	concept_tec_worker_job_tec_mental_servant_alias: "$job_tec_mental_servant$"
+	concept_tec_worker_job_tec_mental_servant_icon: "£job_tec_mental_servant£ $job_tec_mental_servant$"
+	concept_tec_worker_job_tec_mental_servant_plural: "$job_tec_mental_servant_plural$"
+	concept_tec_worker_job_tec_mental_servant_plural_icon: "£job_tec_mental_servant£ $job_tec_mental_servant_plural$"
+	concept_tec_worker_job_tec_mental_servant_desc: "§L$job_tec_mental_servant_desc$§!\n\n$job_tec_mental_servant_effect_desc$\n\n$tec_loc_c_stratum$: §Y$pop_cat_simple_drone$§!\n$tec_loc_c_produces$:\n\n"
+
 	# /
  # Unsorted
 
