more civic changes

--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -523,28 +523,64 @@
 	concept_tec_ruler_job_tec_corpo_litho_manager_desc: "§L$job_tec_corpo_litho_manager_desc$§!\n\n$job_tec_corpo_litho_manager_effect_desc$\n\n$tec_loc_c_stratum$: §Y$pop_cat_ruler$§!\n$tec_loc_c_produces$:\n\n"
 
 
+	# Hive
+		concept_tec_ruler_job_tec_broodqueen_drone: "$job_tec_broodqueen_drone$"
+		concept_tec_ruler_job_tec_broodqueen_drone_alias: "$job_tec_broodqueen_drone$"
+		concept_tec_ruler_job_tec_broodqueen_drone_icon: "£job_tec_broodqueen_drone£ $job_tec_broodqueen_drone$"
+		concept_tec_ruler_job_tec_broodqueen_drone_plural: "$job_tec_broodqueen_drone_plural$"
+		concept_tec_ruler_job_tec_broodqueen_drone_plural_icon: "£job_tec_broodqueen_drone£ $job_tec_broodqueen_drone_plural$"
+		concept_tec_ruler_job_tec_broodqueen_drone_desc: "§L$job_tec_broodqueen_drone_desc$§!\n\n$job_tec_broodqueen_drone_effect_desc$\n\n$tec_loc_c_stratum$: §Y$pop_cat_tec_brood_drone$§!\n$tec_loc_c_produces$:\n\n"
 
-	concept_tec_ruler_job_tec_broodqueen_drone: "$job_tec_broodqueen_drone$"
-	concept_tec_ruler_job_tec_broodqueen_drone_alias: "$job_tec_broodqueen_drone$"
-	concept_tec_ruler_job_tec_broodqueen_drone_icon: "£job_tec_broodqueen_drone£ $job_tec_broodqueen_drone$"
-	concept_tec_ruler_job_tec_broodqueen_drone_plural: "$job_tec_broodqueen_drone_plural$"
-	concept_tec_ruler_job_tec_broodqueen_drone_plural_icon: "£job_tec_broodqueen_drone£ $job_tec_broodqueen_drone_plural$"
-	concept_tec_ruler_job_tec_broodqueen_drone_desc: "§L$job_tec_broodqueen_drone_desc$§!\n\n$job_tec_broodqueen_drone_effect_desc$\n\n$tec_loc_c_stratum$: §Y$pop_cat_tec_brood_drone$§!\n$tec_loc_c_produces$:\n\n"
+		concept_tec_ruler_job_tec_broodlord_drone: "$job_tec_broodlord_drone$"
+		concept_tec_ruler_job_tec_broodlord_drone_alias: "$job_tec_broodlord_drone$"
+		concept_tec_ruler_job_tec_broodlord_drone_icon: "£job_tec_broodlord_drone£ $job_tec_broodlord_drone$"
+		concept_tec_ruler_job_tec_broodlord_drone_plural: "$job_tec_broodlord_drone_plural$"
+		concept_tec_ruler_job_tec_broodlord_drone_plural_icon: "£job_tec_broodlord_drone£ $job_tec_broodlord_drone_plural$"
+		concept_tec_ruler_job_tec_broodlord_drone_desc: "§L$job_tec_broodlord_drone_desc$§!\n\n$job_tec_broodlord_drone_effect_desc$\n\n$tec_loc_c_stratum$: §Y$pop_cat_tec_brood_drone$§!\n$tec_loc_c_produces$:\n\n"
 
-	concept_tec_ruler_job_tec_broodlord_drone: "$job_tec_broodlord_drone$"
-	concept_tec_ruler_job_tec_broodlord_drone_alias: "$job_tec_broodlord_drone$"
-	concept_tec_ruler_job_tec_broodlord_drone_icon: "£job_tec_broodlord_drone£ $job_tec_broodlord_drone$"
-	concept_tec_ruler_job_tec_broodlord_drone_plural: "$job_tec_broodlord_drone_plural$"
-	concept_tec_ruler_job_tec_broodlord_drone_plural_icon: "£job_tec_broodlord_drone£ $job_tec_broodlord_drone_plural$"
-	concept_tec_ruler_job_tec_broodlord_drone_desc: "§L$job_tec_broodlord_drone_desc$§!\n\n$job_tec_broodlord_drone_effect_desc$\n\n$tec_loc_c_stratum$: §Y$pop_cat_tec_brood_drone$§!\n$tec_loc_c_produces$:\n\n"
+		concept_tec_ruler_job_tec_overmind_drone: "$job_tec_overmind_drone$"
+		concept_tec_ruler_job_tec_overmind_drone_alias: "$job_tec_overmind_drone$"
+		concept_tec_ruler_job_tec_overmind_drone_icon: "£job_tec_overmind_drone£ $job_tec_overmind_drone$"
+		concept_tec_ruler_job_tec_overmind_drone_plural: "$job_tec_overmind_drone_plural$"
+		concept_tec_ruler_job_tec_overmind_drone_plural_icon: "£job_tec_overmind_drone£ $job_tec_overmind_drone_plural$"
+		concept_tec_ruler_job_tec_overmind_drone_desc: "§L$job_tec_overmind_drone_desc$§!\n\n$job_tec_overmind_drone_effect_desc$\n\n$tec_loc_c_stratum$: §Y$pop_cat_tec_brood_drone$§!\n$tec_loc_c_produces$:\n\n"
+	# /
+	# Machine
+		concept_tec_ruler_job_tec_prime_performance_drone: "$job_tec_prime_performance_drone$"
+		concept_tec_ruler_job_tec_prime_performance_drone_alias: "$job_tec_prime_performance_drone$"
+		concept_tec_ruler_job_tec_prime_performance_drone_icon: "£job_tec_prime_performance_drone£ $job_tec_prime_performance_drone$"
+		concept_tec_ruler_job_tec_prime_performance_drone_plural: "$job_tec_prime_performance_drone_plural$"
+		concept_tec_ruler_job_tec_prime_performance_drone_plural_icon: "£job_tec_prime_performance_drone£ $job_tec_prime_performance_drone_plural$"
+		concept_tec_ruler_job_tec_prime_performance_drone_desc: "§L$job_tec_prime_performance_drone_desc$§!\n\n$job_tec_prime_performance_drone_effect_desc$\n\n$tec_loc_c_stratum$: §Y$pop_cat_tec_prime_drone$§!\n$tec_loc_c_produces$:\n\n"
 
-	concept_tec_ruler_job_tec_overmind_drone: "$job_tec_overmind_drone$"
-	concept_tec_ruler_job_tec_overmind_drone_alias: "$job_tec_overmind_drone$"
-	concept_tec_ruler_job_tec_overmind_drone_icon: "£job_tec_overmind_drone£ $job_tec_overmind_drone$"
-	concept_tec_ruler_job_tec_overmind_drone_plural: "$job_tec_overmind_drone_plural$"
-	concept_tec_ruler_job_tec_overmind_drone_plural_icon: "£job_tec_overmind_drone£ $job_tec_overmind_drone_plural$"
-	concept_tec_ruler_job_tec_overmind_drone_desc: "§L$job_tec_overmind_drone_desc$§!\n\n$job_tec_overmind_drone_effect_desc$\n\n$tec_loc_c_stratum$: §Y$pop_cat_tec_brood_drone$§!\n$tec_loc_c_produces$:\n\n"
+		concept_tec_ruler_job_tec_prime_research_drone: "$job_tec_prime_research_drone$"
+		concept_tec_ruler_job_tec_prime_research_drone_alias: "$job_tec_prime_research_drone$"
+		concept_tec_ruler_job_tec_prime_research_drone_icon: "£job_tec_prime_research_drone£ $job_tec_prime_research_drone$"
+		concept_tec_ruler_job_tec_prime_research_drone_plural: "$job_tec_prime_research_drone_plural$"
+		concept_tec_ruler_job_tec_prime_research_drone_plural_icon: "£job_tec_prime_research_drone£ $job_tec_prime_research_drone_plural$"
+		concept_tec_ruler_job_tec_prime_research_drone_desc: "§L$job_tec_prime_research_drone_desc$§!\n\n$job_tec_prime_research_drone_effect_desc$\n\n$tec_loc_c_stratum$: §Y$pop_cat_tec_prime_drone$§!\n$tec_loc_c_produces$:\n\n"
 
+		concept_tec_ruler_job_tec_prime_reimaginator_drone: "$job_tec_prime_reimaginator_drone$"
+		concept_tec_ruler_job_tec_prime_reimaginator_drone_alias: "$job_tec_prime_reimaginator_drone$"
+		concept_tec_ruler_job_tec_prime_reimaginator_drone_icon: "£job_tec_prime_reimaginator_drone£ $job_tec_prime_reimaginator_drone$"
+		concept_tec_ruler_job_tec_prime_reimaginator_drone_plural: "$job_tec_prime_reimaginator_drone_plural$"
+		concept_tec_ruler_job_tec_prime_reimaginator_drone_plural_icon: "£job_tec_prime_reimaginator_drone£ $job_tec_prime_reimaginator_drone_plural$"
+		concept_tec_ruler_job_tec_prime_reimaginator_drone_desc: "§L$job_tec_prime_reimaginator_drone_desc$§!\n\n$job_tec_prime_reimaginator_drone_effect_desc$\n\n$tec_loc_c_stratum$: §Y$pop_cat_tec_prime_drone$§!\n$tec_loc_c_produces$:\n\n"
+
+		concept_tec_ruler_job_tec_prime_debugger_drone: "$job_tec_prime_debugger_drone$"
+		concept_tec_ruler_job_tec_prime_debugger_drone_alias: "$job_tec_prime_debugger_drone$"
+		concept_tec_ruler_job_tec_prime_debugger_drone_icon: "£job_tec_prime_debugger_drone£ $job_tec_prime_debugger_drone$"
+		concept_tec_ruler_job_tec_prime_debugger_drone_plural: "$job_tec_prime_debugger_drone_plural$"
+		concept_tec_ruler_job_tec_prime_debugger_drone_plural_icon: "£job_tec_prime_debugger_drone£ $job_tec_prime_debugger_drone_plural$"
+		concept_tec_ruler_job_tec_prime_debugger_drone_desc: "§L$job_tec_prime_debugger_drone_desc$§!\n\n$job_tec_prime_debugger_drone_effect_desc$\n\n$tec_loc_c_stratum$: §Y$pop_cat_tec_prime_drone$§!\n$tec_loc_c_produces$:\n\n"
+
+		concept_tec_ruler_job_tec_prime_warform_drone: "$job_tec_prime_warform_drone$"
+		concept_tec_ruler_job_tec_prime_warform_drone_alias: "$job_tec_prime_warform_drone$"
+		concept_tec_ruler_job_tec_prime_warform_drone_icon: "£job_tec_prime_warform_drone£ $job_tec_prime_warform_drone$"
+		concept_tec_ruler_job_tec_prime_warform_drone_plural: "$job_tec_prime_warform_drone_plural$"
+		concept_tec_ruler_job_tec_prime_warform_drone_plural_icon: "£job_tec_prime_warform_drone£ $job_tec_prime_warform_drone_plural$"
+		concept_tec_ruler_job_tec_prime_warform_drone_desc: "§L$job_tec_prime_warform_drone_desc$§!\n\n$job_tec_prime_warform_drone_effect_desc$\n\n$tec_loc_c_stratum$: §Y$pop_cat_tec_prime_drone$§!\n$tec_loc_c_produces$:\n\n"
+	# /
 	#concept_tec_ruler_job_BASE: "$job_BASE$"
 	#concept_tec_ruler_job_BASE_alias: "$job_BASE$"
 	#concept_tec_ruler_job_BASE_icon: "£job_BASE£ $job_BASE$"
