--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -31,14 +31,14 @@
 
 	tec_loc_warning:0 "£trigger_tec_warning£"
 
-	tec_loc_energy:0 "£energy£ $energy$"
-	tec_loc_minerals:0 "£minerals£ $minerals$"
-	tec_loc_food:0 "£food£ $food$"
-	tec_loc_alloys:0 "£alloys£ $alloys$"
-	tec_loc_consumer_goods:0 "£consumer_goods£ $consumer_goods$"
+	tec_loc_energy:0 "£energy£ Energy"
+	tec_loc_minerals:0 "£minerals£ Minerals"
+	tec_loc_food:0 "£food£ Food"
+	tec_loc_alloys:0 "£alloys£ Alloys"
+	tec_loc_consumer_goods:0 "£consumer_goods£ Consumer Goods"
 	tec_loc_cg:0 "$tec_loc_consumer_goods$"
-	tec_loc_unity:0 "£unity£ $unity$"
-	tec_loc_influence:0 "£influence£ $influence$"
+	tec_loc_unity:0 "£unity£ Unity"
+	tec_loc_influence:0 "£influence£ Influence"
 
 	tec_loc_alloys_and_energy:0 "$tec_loc_alloys$ and $tec_loc_energy$"
 	tec_loc_alloys_and_minerals:0 "$tec_loc_alloys$ and $tec_loc_minerals$"
