Final patch extravaganza

--- a/localisation/english/replace/zz_evolved_councilors_l_english.yml
+++ b/localisation/english/replace/zz_evolved_councilors_l_english.yml
@@ -588,7 +588,7 @@
 	councilor_civic_tec_corporate_reanimators:0 "Mortgage Manager"
 	councilor_civic_tec_corporate_reanimators_female:0 "$councilor_civic_tec_corporate_reanimators$"
 	councilor_civic_tec_corporate_reanimators_desc:0 "When the bell tolls, the $TITLE$ claims (the mortgage); when the work call does, he does too."
-	councilor_civic_tec_corporate_reanimators_custom_modifier:0 "TO DO"
+	councilor_civic_tec_corporate_reanimators_custom_modifier:0 "Eternal Shift Edict Effect: §G+$@councilor_civic_tec_corporate_reanimators_bonus$§!"
 
 	councilor_civic_tec_corporate_memorialist:0 "High Memoriam"
 	councilor_civic_tec_corporate_memorialist_female:0 "$councilor_civic_tec_corporate_memorialist$"
