--- a/localisation/english/replace/zz_evolved_planets_modifiers_l_english.yml
+++ b/localisation/english/replace/zz_evolved_planets_modifiers_l_english.yml
@@ -476,6 +476,32 @@ requires_habitable_planet:0 "$TRIGGER_FAIL$Due to the characteristics of this ki
  d_tec_preserved_eco_ring_2:0 "Interconnected Systems"
  d_tec_preserved_eco_ring_2_desc:0 "This Arcology host a large amount of energy corridors that sustain the world by generating static energy and largely boost any possible energy grid."
 
+# -----------------------------------------------------
+# Special buildings
+	# Keepers
+		# No need for now
+	# /
+	# Rangers
+		# They use blockers
+	# /
+	# Environmentalists
+		# They use blockers
+	# /
+	# Terraformers
+		d_tec_eco_terraformer_soil:0 "Terrasculpted Region"
+		d_tec_eco_terraformer_soil_desc:0 "A $building_tec_eco_engineers_terrasculptor$ heavily altered physical parts of this colony, creating new habitable and buildable areas without compromising the integrity of the rest."
+
+		d_tec_eco_terraformer_biology:0 "Enhanced Biology"
+		d_tec_eco_terraformer_biology_desc:0 "A $building_tec_eco_engineers_terrasculptor$ heavily altered this colony natural reserves, making them serve better ecological niches and cooperate with the inhabitants."
+
+		d_tec_eco_terraformer_magnetic:0 "Magnetic Recalibration"
+		d_tec_eco_terraformer_magnetic_desc:0 "A $building_tec_eco_engineers_terrasculptor$ heavily altered this colony magnetic field on specific zones, improving the ecological efficiency of infrastructure."
+
+		d_tec_eco_terraformer_atmosphere:0 "Reprocessed Atmosphere"
+		d_tec_eco_terraformer_atmosphere_desc:0 "A $building_tec_eco_engineers_terrasculptor$ heavily altered this colony atmosphere, improving its effects on the population, environment and production."
+	# /
+# /
+
 # ------------------------------------------------------------
 ### discarded
 # ------------------------------------------------------------
