--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -1063,7 +1063,12 @@
 	building_tec_occultist_lodge_1_desc:0 "A relatively hidden and secret place where the most occult rituals and technologies are researched and discussed between initiates, experts and lodge leaders"
 
 	building_tec_occultist_lodge_2:0 "Magnum-Lodge"
+	building_tec_occultist_lodge_2_plural:0 "Magnum-Lodges"
 	building_tec_occultist_lodge_2_desc:0 "A heavily secret but relevant place where the heads of the Occult Lodge develop their schemes, focus on the technologies and coordinate with other lodges remotely."
+
+	building_tec_occultist_lodge_3:0 "Exalted Lodge"
+	building_tec_occultist_lodge_3_plural:0 "Exalted Lodge"
+	building_tec_occultist_lodge_3_desc:0 "A heavily secret but relevant place where the heads of the Occult Lodge develop their schemes, focus on the technologies and coordinate with other lodges remotely."
 
 	job_tec_grand_occultist:0 "Occultist"
 	job_tec_grand_occultist_plural:0 "Occultists"
@@ -1534,18 +1539,18 @@
 	tec_shambling_robot_desc:0 "More an amalgam of damaged parts, cables and rusted pointy protuberances, this disgraced machine has seen better days. Now, free of advanced proclamation or violence inhibitors, it routinely activates killing protocols, striking terror upon whoever see them, waiting an unavoidable demise."
  # /
  # ------------------------------------------------- Trade Machines
-	building_tec_trade_machine_1:0 "Crypto-Trading Storage"
+	building_tec_trade_machine_1:0 "Micro-Trading Storage"
 	building_tec_trade_machine_1_desc:0 "Thousands of specialized drones realise complicated and extremely energy demanding proceces for amassing digitalized interchangeable wealth, for the sake of enriching and fitting the original programation of the gestalt empire."
 
-	building_tec_trade_machine_2:0 "Crypto-Trading Hub"
+	building_tec_trade_machine_2:0 "Micro-Trading Hub"
 	building_tec_trade_machine_2_desc:0 "With enhanced installations, thousands of specialized drones realise complicated and extremely energy demanding proceces for amassing digitalized interchangeable wealth, for the sake of enriching and fitting the original programation of the gestalt empire."
 
-	building_tec_trade_machine_stonks:0 "Galactic Crypto-Stock Exchange"
-	building_tec_trade_machine_stonks_desc:0 "Selling thin air with thin air, here the crypto and blockchain collide to create a unlimited amount of variable devaluability trade value, with a dedicated monitor to control the stock changes at a galactic level."
+	building_tec_trade_machine_stonks:0 "Galactic Micro-Stock Exchange"
+	building_tec_trade_machine_stonks_desc:0 "Selling thin air with thin air, here the trade processes collide to create a unlimited amount of variable devaluability trade value, with a dedicated monitor to control the stock changes at a local, general and galactic level."
 
-	job_tec_trade_drone:0 "Blockchain Drone"
-	job_tec_trade_drone_plural:0 "Blockchain Drones"
-	job_tec_trade_drone_desc:0 "Built with insider crypto-mining and blockchain exchangers, and making instantenously gargantuan amounts of trading calculations, these drones have the only and one purpose of amass the maximum amount of trade, generally interchanged by better processing capacities or equipment."
+	job_tec_trade_drone:0 "Trade Drone"
+	job_tec_trade_drone_plural:0 " Drones"
+	job_tec_trade_drone_desc:0 "Built with insider trading operational exchangers, and making instantenously gargantuan amounts of calculations, these drones have the only and one purpose of amass the maximum amount of trade, generally interchanged by better processing capacities or equipment."
 	job_tec_trade_drone_effect_desc:0 "£job_tec_trade_drone£ $job_tec_trade_drone_plural$ consumes a small amount of $tec_loc_energy$ to generate §Y$tec_loc_trade_value$§!."
 	mod_job_tec_trade_drone_add:0 "$job_tec_trade_drone$ Jobs"
 	mod_job_tec_trade_drone_per_pop:0 "§G+1§! $job_tec_trade_drone$ Job per $VALUE$ Pops"
@@ -1757,22 +1762,31 @@
 	holding_tec_gaia_sapling_6_desc:0 ""
  # /
  # Eco civics
+	building_tec_eco_keepers_sphere:0 "Sanctified Ecosphere"
+	building_tec_eco_keepers_sphere_plural:0 "$building_tec_eco_keepers_sphere$s"
+	building_tec_eco_keepers_sphere_desc:0 "A micro continent in the form of a perfect ecological sanctuary, with flourising mountains and calm rivers; a paradise contained within an elevated technological self-substainable sphere."
 
 	building_tec_eco_environmentalist_center:0 "Ecological Center"
 	building_tec_eco_environmentalist_center_plural:0 "$building_tec_eco_environmentalist_center$s"
-	building_tec_eco_environmentalist_center_desc:0 "TO DO."
-
-	building_tec_eco_keepers_sphere:0 "Sanctified Ecosphere"
-	building_tec_eco_keepers_sphere_plural:0 "$building_tec_eco_keepers_sphere$s"
-	building_tec_eco_keepers_sphere_desc:0 "TO DO."
+	building_tec_eco_environmentalist_center_desc:0 "A marvel of environmental design, this installation replicates and recreates the natural disposition of ecological diversity respecting existing one."
+	building_tec_eco_environmentalist_center_effect:0 "$building_tec_eco_environmentalist_center_effect_ref$\nMonths until the next $tec_loc_natural_blocker$: §G[Planet.tec_eco_cd_months]§!"
+	building_tec_eco_environmentalist_center_effect_ref:0 "§HCan't be deactivated§!\nThis $tec_loc_building$ generates extra §Y$tec_loc_natural_blockers$§! on the planet each 20 years after its construction."
 
 	building_tec_eco_engineers_terrasculptor:0 "Terrasculpting Facility"
 	building_tec_eco_engineers_terrasculptor_plural:0 "Terrasculpting Facilities"
-	building_tec_eco_engineers_terrasculptor_desc:0 "TO DO."
+	building_tec_eco_engineers_terrasculptor_desc:0 "Massive installations affecting large sections of the colony, prepared for dispersing terrasculpting microagents to rearrange and improve existing spaces and environments."
+	building_tec_eco_engineers_terrasculptor_effect_ref:0 "§RCan't be deactivated§!\nThis $tec_loc_building$ generates extra §Y$tec_loc_planet_engineered_feature$§! after being §YActivated§! (Upgraded)."
+	building_tec_eco_engineers_terrasculptor_effect:0 "§RCan't be deactivated§!\nThis $tec_loc_building$ generates extra §Y$tec_loc_planet_engineered_feature$§! after being §YUpgraded§!."
 	# Fake upgrade
-	building_tec_eco_engineers_terrasculptor_2:0 "Terrasculpting Facility"
-	building_tec_eco_engineers_terrasculptor_2_plural:0 "Terrasculpting Facilities"
-	building_tec_eco_engineers_terrasculptor_2_desc:0 "TO DO."
+	building_tec_eco_engineers_terrasculptor_active:0 "$building_tec_eco_engineers_terrasculptor$ - Active"
+	building_tec_eco_engineers_terrasculptor_active_plural:0 "$building_tec_eco_engineers_terrasculptor_plural$"
+	building_tec_eco_engineers_terrasculptor_active_desc:0 "$building_tec_eco_engineers_terrasculptor_desc$\nThe $building_tec_eco_engineers_terrasculptor$ of this colony is actively altering it."
+	building_tec_eco_engineers_terrasculptor_active_effect_ref:0 "§RCan't be deactivated§!\nThis $tec_loc_building$ is generating extra §Y$tec_loc_planet_engineered_features$§!."
+	building_tec_eco_engineers_terrasculptor_active_effect:0 "§RCan't be deactivated§!\nThis $tec_loc_building$ is generating extra §Y$tec_loc_planet_engineered_features$§!.\nNext cycle of Terrasculpting ends on §Y[Planet.tec_terrasculpting_timer]§!"
+
+	mod_tec_eco_terrasculptor_deposit:0 "§ETerrasculpting Feature§!"
+	mod_tec_eco_terrasculptor_deposit_short:0 "\n§ETerrasculpting Feature§!"
+
  # /
  # Gene blabla
 	building_tec_evolutionary_lab_1:0 "Evolutionary Lab"
@@ -1843,10 +1857,13 @@
 
 	job_tec_pleasure_giver:0 "Pleasure Giver"
 	job_tec_pleasure_giver_plural:0 "Pleasure Giver"
-	job_tec_pleasure_giver_desc:0 "Consecrated to a life of providing pleasure, rest and entertainment, these workers ensure the joyful distractions and excellences to whoever seeks new experiences."
-	job_tec_pleasure_giver_effect_desc:0 "£job_servant£ $job_tec_pleasure_giver_plural$ turn §Y$tec_loc_amenities$§! into §Y$tec_loc_unity$§! and §Y$tec_loc_happiness$§!."
-	job_tec_pleasure_giver_effect_desc_corporate:0 "£job_servant£ $job_tec_pleasure_giver_plural$ turn §Y$tec_loc_trade$§! into §Y$tec_loc_unity$§! and §Y$tec_loc_happiness$§!."
-	job_tec_pleasure_giver_desire_effect_desc:0 "£job_servant£ $job_tec_pleasure_giver_plural$ generate §Y$tec_loc_amenities$§!, §Y$tec_loc_happiness$§! and §Y$tec_loc_pop_growth$§!."
+	job_tec_pleasure_giver_desc:0 "Consecrated to a life of providing pleasure, rest and entertainment, these dedicated individuals ensure the joyful distractions and excellences to whoever seeks new experiences."
+	job_tec_pleasure_giver_effect_desc:0 "£job_servant£ $job_tec_pleasure_giver_plural$ turn §Y[tec_scripted_loc_amenities_trade_upkeeps_normal]§! into §Y$tec_loc_unity$§!, §Y$tec_loc_happiness$§! and a bonus based on the §Y$tec_loc_planet_designation$§!."
+	job_tec_pleasure_giver_effect_desc_standard:0 "£job_servant£ $job_tec_pleasure_giver_plural$ turn §Y$tec_loc_amenities$§! into §Y$tec_loc_unity$§!, §Y$tec_loc_happiness$§! and a bonus based on the §Y$tec_loc_planet_designation$§!."
+	job_tec_pleasure_giver_effect_desc_corporate:0 "£job_servant£ $job_tec_pleasure_giver_plural$ turn §Y$tec_loc_trade$§! into §Y$tec_loc_unity$§!, §Y$tec_loc_happiness$§! and a bonus based on the §Y$tec_loc_planet_designation$§!."
+	mod_job_tec_pleasure_giver_add:0 "$job_tec_pleasure_giver$ Jobs"
+	mod_job_tec_pleasure_giver_per_pop:0 "§G+1§! $job_tec_pleasure_giver$ Job Per $VALUE$ Pops"
+	mod_job_tec_pleasure_giver_per_pop_short:0 "\n§G+1§! £mod_job_servant£ per $VALUE$ £pop£"
  # /
  # Zombies
 	building_tec_reanimation_necropoli_1:0 "Reanimation Halls"
@@ -1862,11 +1879,14 @@
 	building_tec_reanimation_necropoli_3_desc:0 "TO DO"
  # /
  # Genetic Ascendancy
-	council_agenda_agenda_tec_genetic_ascendancy_name:0 "Epigenetic Restoration"
+
 
 	building_tec_epigenetic_chambers:0 "Epigenetic Chambers"
 	building_tec_epigenetic_chambers_plural:0 "$building_tec_epigenetic_chambers$"
-	building_tec_epigenetic_chambers_desc:0 "TO DO."
+	building_tec_epigenetic_chambers_desc:0 "Monumental structures and installations consecrated to harness, control, redesign and improve the genetic code and individual efficiency."
+
+	building_tec_epigenetic_chambers_effect:0 "The effects of this building are §GAmplified§! by the number of §Y$tec_loc_ascension_perks$§! obtained"
+		#Allows the §YRestoration§! of organic deceased leaders.\nInitial chance: §Y30%§!\nExtra chance increased by the rate of §Y$mod_tec_epigenetic_restoration_mult$§!"
  # /
  # Labrats
 	job_tec_labrat:0 "Test Subject"
@@ -1875,7 +1895,9 @@
 	job_tec_labrat_effect_desc:0 "£job_tec_labrat£ $job_tec_labrat_plural$ turn §Y$tec_loc_amenities$§! into §Y$tec_loc_research_resources$§!, by participating in ''questionable'' experiments."
 	job_tec_labrat_effect_desc_corporate:0 "£job_tec_labrat£ $job_tec_labrat_plural$ turn §Y$tec_loc_trade$§! into §Y$tec_loc_research_resources$§!, by participating in ''questionable'' experiments."
 	job_tec_labrat_effect_desc:0 "£job_tec_labrat£ $job_tec_labrat_plural$ turn §Y[tec_scripted_loc_amenities_trade_upkeeps_normal]§! into §Y$tec_loc_research_resources$§!, by participating in ''questionable'' experiments."
-	mod_job_tec_labrat_add:0 "\n§G+1§! £mod_job_tec_labrat_add£ per $VALUE$ £pop£"
+	mod_job_tec_labrat_add:0 "$job_tec_labrat$ Jobs"
+	mod_job_tec_labrat_per_pop:0 "§G+1§! $job_tec_labrat$ Job Per $VALUE$ Pops"
+	mod_job_tec_labrat_per_pop_short:0 "\n§G+1§! £mod_job_tec_labrat_add£ per $VALUE$ £pop£"
  # /
  # Forced Reeducation
 	building_tec_reeducation_facility:0 "Reeducation Facility"
