--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -19,7 +19,7 @@
 # §Y thisisyellow §!
 
 # --------------------------- MAINSCREEN -------------------------------- #DATE DATE DATE DATE
-	TEC_EVOLVED_VERSION:0 "Evolved Version: v0.9R6B (§Y15-07-2023§!)"
+	TEC_EVOLVED_VERSION:0 "Evolved Version: v0.9R6B (§Y21-08-2023§!)"
 	TEC_EVOLVED_TOOLTIP:0 "§E$TEC_EVOLVED_TITLE$§!\n§Y$TEC_EVOLVED_STEAMLINK$§!\n$TEC_EVOLVED_REPORTS$\n\n$TEC_EVOLVED_DONATIONS$"
 	TEC_EVOLVED_TITLE:0 "Stellaris Evolved"
 	TEC_EVOLVED_STEAMLINK:0 "Clicking this item will open the mod Steam Workshop page"
@@ -101,6 +101,7 @@
 	tec_loc_job: "£job£ Job"
 
 	tec_loc_designation: "£stability£ Designation"
+	tec_loc_planet_designation: "£stability£ Planet Designation"
 
 	tec_loc_district: "£district£ $DISTRICT$"
 	tec_loc_districts: "£district£ $DISTRICTS$"
@@ -108,12 +109,18 @@
 	tec_loc_buildings: "£building£ $BUILDINGS_TITLE$"
 	tec_loc_blocker: "£blocker£ $BLOCKER_DEPOSIT$"
 	tec_loc_blockers: "£blocker£ $BLOCKER_DEPOSITS$"
+	tec_loc_natural_blocker: "£blocker£ Natural $BLOCKER_DEPOSIT$"
+	tec_loc_natural_blockers: "£blocker£ Natural $BLOCKER_DEPOSITS$"
 	tec_loc_deposit: "£tec_deposit£ Deposit"
 	tec_loc_deposits: "$tec_loc_deposit$s"
 	tec_loc_resource_deposit: "£tec_deposit£ Resource Deposit"
 	tec_loc_resource_deposits: "$tec_loc_resource_deposit$s"
 	tec_loc_planet_feature: "£tec_planet_feature£ Planet Feature"
 	tec_loc_planet_features: "$tec_loc_planet_feature$s"
+	tec_loc_planet_natural_feature: "£tec_planet_feature£ Natural Feature"
+	tec_loc_planet_natural_features: "$tec_loc_planet_natural_feature$s"
+	tec_loc_planet_engineered_feature: "£tec_planet_feature£ Engineered Feature"
+	tec_loc_planet_engineered_features: "$tec_loc_planet_engineered_feature$s"
 
 	tec_loc_sr_tec_ai_power: "£sr_tec_ai_power£ $sr_tec_ai_power$"
 	tec_loc_sr_tec_machine_processing_empire: "£sr_tec_machine_processing_empire£ $sr_tec_machine_processing_empire$"
@@ -157,7 +164,12 @@
 	tec_loc_district_icon:0 "£district£"
 
 	tec_loc_planet_ascension:0 "£unity£ Planet Ascension"
-	tec_loc_planet_ascension_plural:0 "£unity£ Planet Ascensions"
+	tec_loc_planet_ascensions:0 "£unity£ Planet Ascensions"
+	tec_loc_planet_ascension_plural:0 "$tec_loc_planet_ascensions$"
+
+	tec_loc_ascension_perk:0 "£unity£ Ascension Perk"
+	tec_loc_ascension_perks:0 "£unity£ Ascension Perks"
+	tec_loc_ascension_perk_plural:0 "$tec_loc_ascension_perks$"
 
 	tec_loc_xenocytes:0 "£tec_genetics_icon£ §YXenocytes§!"
 
@@ -182,10 +194,12 @@
 	tec_loc_ruler_plural: "£ruler£ Rulers"
 	tec_loc_councilor: "£council£ Councilor"
 	tec_loc_councilor_plural: "£council£ Councilors"
+	tec_loc_council_members: "£council£ Council Members"
 	tec_loc_idle_leader: "£unemployment£ Idle Leader"
 
 	tec_loc_leader_icon:0 "£tec_leader£"
 	tec_loc_leader:0 "$tec_loc_leader_icon$ Leader"
+	tec_loc_leaders:0 "$tec_loc_leader_icon$ Leaders"
 
 	tec_loc_councilor_traits: "£council£ Councilor Traits"
 	tec_loc_normal_traits: "£noclass£ Normal Traits"
