--- a/localisation/english/zz_evolved_edict_policies_l_english.yml
+++ b/localisation/english/zz_evolved_edict_policies_l_english.yml
@@ -91,6 +91,26 @@
 	modifier_tec_agenda_tec_ethic_gestalt_introspective_finish:0 "REPLACE_ME"
 	modifier_tec_agenda_tec_ethic_gestalt_extrospective_finish:0 "REPLACE_ME"
  # /
+ # Civic
+	# Genetic Ascendancy
+		# Based on agenda_gestalt_purge_traits
+		council_agenda_agenda_tec_genetic_ascendancy_name:0 "Epigenetic Restoration"
+		council_agenda_agenda_tec_genetic_ascendancy_desc:0 "Genetic malformation and undesirable biological development are things we must overcome; with our dexterity in genetics and our genetic repository we can repair and improve those who lead us forward."
+		council_agenda_agenda_tec_genetic_ascendancy_effect_desc:0 "Removes §HNegative Traits§! from Organic Leaders.\n$tec_loc_ruler$ and $tec_loc_council_members$ are prioritized.\nFor each Trait removed, lose §R500§! experience (reduced by the §HEpigenetic Restoration Effectivity§!)."
+		# Levels
+			council_agenda_agenda_tec_genetic_ascendancy_tier_1:0 "The empire §Y£building£ $building_tec_epigenetic_chambers$§! and the number of §Y$tec_loc_planet_ascensions$§! (All planets) affects this agenda:\n$t$- §HEffects applicable to §G1§! $tec_loc_leader$§!"
+			council_agenda_agenda_tec_genetic_ascendancy_tier_2:0 "The empire §Y£building£ $building_tec_epigenetic_chambers$§! and the number of §Y$tec_loc_planet_ascensions$§! (All planets) affects this agenda:\n$t$- §HEffects amplified to §G2§! $tec_loc_leaders$§!"
+			council_agenda_agenda_tec_genetic_ascendancy_tier_3:0 "The empire §Y£building£ $building_tec_epigenetic_chambers$§! and the number of §Y$tec_loc_planet_ascensions$§! (All planets) affects this agenda:\n$t$- §HEffects amplified to §G3§! $tec_loc_leaders$§!"
+			council_agenda_agenda_tec_genetic_ascendancy_tier_4:0 "The empire §Y£building£ $building_tec_epigenetic_chambers$§! and the number of §Y$tec_loc_planet_ascensions$§! (All planets) affects this agenda:\n$t$- §HEffects amplified to §G4§! $tec_loc_leaders$§!"
+			council_agenda_agenda_tec_genetic_ascendancy_tier_5:0 "The empire §Y£building£ $building_tec_epigenetic_chambers$§! and the number of §Y$tec_loc_planet_ascensions$§! (All planets) affects this agenda:\n$t$- §HEffects amplified to §G5§! $tec_loc_leaders$§!"
+		# /
+		modifier_tec_agenda_tec_genetic_ascendancy_finish:0 "$council_agenda_agenda_tec_genetic_ascendancy_name$ $agenda_ref$"
+		modifier_tec_agenda_tec_genetic_ascendancy_finish_desc:0 "$council_agenda_agenda_tec_genetic_ascendancy_desc$"
+		agenda_tec_genetic_ascendancy_desc:0 "$council_agenda_agenda_tec_genetic_ascendancy_desc$"
+
+		mod_tec_epigenetic_restoration_mult:0 "Epigenetic Restoration Effectivity"
+	# /
+ # /
  # Other
 
  # /
@@ -254,7 +274,7 @@ edict_patriotic_call_desc:0 "To Arms! Your Nation Needs You In This Dark Hour!"
  
  spiritual_harmony:0 "Genuine Harmony"
  spiritual_harmony_name:0 "Genuine Harmony"
- spiritual_harmony_desc:0 "Living in a perfect harmony with mother-Nature brings fulfilment to your people, serving as a source of wisdom and physical health." 
+ spiritual_harmony_desc:0 "Living in a perfect harmony with mother-Nature brings fulfillment to your people, serving as a source of wisdom and physical health." 
 
  faith_def:0 "Defenders of Faith"
  faith_def_name:0 "Defenders of Faith"
